fix spacing

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   border-radius: 50%;
   border-width: 0.1rem;
   border-style: solid;
-  margin: 0 0.1rem;
+  margin: 0.1rem 0.1rem;
   padding: 0;
 }
 
